src/test/bad/no_match.jb
variant {
	int a;
} my_variant;

int main() {
	my_variant v = :a(1);
	case v of
		| :b(n) -> "a";
}
